# issues-repro-myst-nb-intl

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.ipynb
docs/locale/de/LC_MESSAGES/: index.po
src/myst_nb1/: __init__.py
