[project]
authors = [
  {name = "Tony Wu", email = "tonywu6@protonmail.com"},
]
dependencies = [
  "myst-nb>=1.0.0",
  "sphinx>=7.2.6",
  "sphinx-intl>=2.1.0",
  "jupyterlab>=4.1.3",
]
description = "Add your description here"
name = "myst-nb1"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = []
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/myst_nb1"]
